--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -22,7 +22,7 @@
     top: 0;
     left: 0;
     background-color: #000;
-    background-image: url("../../assets/images/hero.jpg");
+    background-image: url("../../assets/images/hero-min.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
