updated browser support

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,3 +1,5 @@
+/* autoprefixer grid: autoplace */
+
 @import "../../assets/stylesheets/breakpoints";
 @import "../../assets/stylesheets/variables";
 
